# andy-widgets

./: CMakeLists.txt  schema.xsd
experiments/: main.cpp  old.cpp
include/andy/widgets/: input.hpp  layout.hpp  text.hpp  widget.hpp
include/uva/: widgets.hpp
include/uva/widgets/: input.hpp  layout.hpp  text.hpp  widget.hpp
src/: input.cpp  layout.cpp  text.cpp  widget.cpp
uva-tests/: 2.xml
uva-tests/uva-widgets/: layout_spec.cpp  text_spec.cpp
